@@ -2,6 +2,7 @@
 -minor change with colorkey parameter.
 -revise control event instantiation.
 -revise control userevents.
+-revise image load.
 
 0.88    2019-04-06
 -update interface to address issue in move method when get_fps return zero.
